--- a/eecs4413-project/WebContent/Dashboard.jspx
+++ b/eecs4413-project/WebContent/Dashboard.jspx
@@ -49,7 +49,7 @@
         </div>
         
         <div id="footer">
-          <!-- <jsp:include page="Footer.jsp"></jsp:include> -->
+          <jsp:include page="Footer.jspx"></jsp:include>
         </div>
       </div>
     </body>
