--- a/eecs4413-project/WebContent/Categories.jspx
+++ b/eecs4413-project/WebContent/Categories.jspx
@@ -1,29 +1,39 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-   <!-- Categories.jspx starts  -->
-<jsp:root  version="2.0" 
-    xmlns:jsp="http://java.sun.com/JSP/Page" 
-    xmlns:c="http://java.sun.com/jsp/jstl/core">
-  <jsp:directive.page contentType="text/html; charset=UTF-8"
-    pageEncoding="UTF-8" session="false" />
-  <jsp:output doctype-root-element="html"
-    doctype-public="-//W3C//DTD XHTML 1.0 Transitional//EN"
-    doctype-system="http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"
-    omit-xml-declaration="true" />
-  <html xmlns="http://www.w3.org/1999/xhtml">
-    <div>
-      <h2>Please Choose your Category</h2>
-      <TABLE>
-        <c:if test="${ not empty requestScope['com.foodrus.util.categories'] }">
-          <c:forEach items="${requestScope['com.foodrus.util.categories']}" var="cat">
-            <tr>
-              <td>${cat.name}</td>
-              <td>${cat.description}</td>
-              <td><a href="${contextPath}/action//listitems?chosencat=${cat.id}">Browse ${cat.name}</a></td>
-            </tr>
-          </c:forEach> 
-        </c:if>
-      </TABLE>
-    </div>    
-  </html>
-  <!-- Categories.jspx ends  -->
+<!-- Categories.jspx starts  -->
+<jsp:root version="2.0" xmlns:jsp="http://java.sun.com/JSP/Page"
+	xmlns:c="http://java.sun.com/jsp/jstl/core">
+	<jsp:directive.page contentType="text/html; charset=UTF-8"
+		pageEncoding="UTF-8" session="false" />
+	<jsp:output doctype-root-element="html"
+		doctype-public="-//W3C//DTD XHTML 1.0 Transitional//EN"
+		doctype-system="http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"
+		omit-xml-declaration="true" />
+	<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<link rel="alternate StyleSheet"
+        href="${contextPath}/res/css/catStyle.css"
+        type="text/css" title="eecs4413" media="screen, print" />
+</head>
+<body>
+	<div>
+		<h2>Please Choose your Category</h2>
+		<TABLE id="catTable">
+			<c:if test="${ not empty requestScope['com.foodrus.util.categories'] }">
+				<c:forEach items="${requestScope['com.foodrus.util.categories']}" var="cat">
+					<tr>
+						<td>img here</td>
+					</tr>
+					<tr>
+						<td><a href="${contextPath}/action/listitems?chosencat=${cat.id}">Browse ${cat.name}</a></td>					
+					</tr>
+					<tr>
+						<td>Details: ${cat.description}</td>		
+					</tr>
+				</c:forEach>
+			</c:if>
+		</TABLE>
+	</div>
+</body>
+	</html>
+	<!-- Categories.jspx ends  -->
 </jsp:root>
