--- a/eecs4413-project/WebContent/Items.jspx
+++ b/eecs4413-project/WebContent/Items.jspx
@@ -1,32 +1,49 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-   <!-- Categories.jspx starts  -->
-<jsp:root  version="2.0" 
-    xmlns:jsp="http://java.sun.com/JSP/Page" 
-    xmlns:c="http://java.sun.com/jsp/jstl/core">
-  <jsp:directive.page contentType="text/html; charset=UTF-8"
-    pageEncoding="UTF-8" session="false" />
-  <jsp:output doctype-root-element="html"
-    doctype-public="-//W3C//DTD XHTML 1.0 Transitional//EN"
-    doctype-system="http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"
-    omit-xml-declaration="true" />
-  <html xmlns="http://www.w3.org/1999/xhtml">
-    <div>
-      <h2>Choose Items</h2>
-      <TABLE border="2">
-        <tr>
-          <th>ID</th>
-          <th>Name</th>
-        </tr>
-        <c:if test="${ not empty requestScope['com.foodrus.util.items'] }">
-          <c:forEach items="${requestScope['com.foodrus.util.items']}" var="item">
-            <tr>
-              <th>${item.number}</th>
-              <th>${item.name}</th>
-            </tr>
-          </c:forEach> 
-        </c:if>
-      </TABLE>
-    </div>    
-  </html>
-  <!-- Items.jspx ends  -->
+<!-- Categories.jspx starts  -->
+<jsp:root version="2.0" xmlns:jsp="http://java.sun.com/JSP/Page"
+	xmlns:c="http://java.sun.com/jsp/jstl/core">
+	<jsp:directive.page contentType="text/html; charset=UTF-8"
+		pageEncoding="UTF-8" session="false" />
+	<jsp:output doctype-root-element="html"
+		doctype-public="-//W3C//DTD XHTML 1.0 Transitional//EN"
+		doctype-system="http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"
+		omit-xml-declaration="true" />
+	<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<link rel="alternate StyleSheet"
+        href="${contextPath}/res/css/catStyle.css"
+        type="text/css" title="eecs4413" media="screen, print" />
+</head>
+<body>
+
+	<h2>Please Choose Items</h2>
+
+	<c:if test="${ not empty requestScope['com.foodrus.util.items'] }">
+		<c:forEach items="${requestScope['com.foodrus.util.items']}" var="item">
+			
+				<label id="itemname">${item.name}</label>
+				<br/>
+				<br/>
+				<label id="itemnumber">Product ID: ${item.number}</label>
+				<br/>
+				<label id="itemqperunit"> Quantity per Unit: ${item.unit}
+				</label>
+				<br/>
+				<lable id="itemprice">Unit price:  ${item.price}</lable>
+				<form action="" method="GET">
+					<input type="hidden" id="itemid" name="chosenitem" value="${item.number}" />
+					<span id="purchasetext">Quanity to purchase:</span>
+					<input id="quantity" name="chosenquantity" type="text" value="" /> 
+					<input id="addcart" type="submit" value="add to cart" />
+				</form>
+				<hr width="100%" size="1px"></hr>
+			
+		</c:forEach>
+	</c:if>
+
+
+</body>
+
+	</html>
+	<!-- Items.jspx ends  -->
 </jsp:root>
