--- a/eecs4413-project/WebContent/Head.jspx
+++ b/eecs4413-project/WebContent/Head.jspx
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-<jsp:root xmlns:jsp="http://java.sun.com/JSP/Page" version="2.0">
+<jsp:root xmlns:jsp="http://java.sun.com/JSP/Page" version="2.0"
+xmlns:fmt="http://java.sun.com/jsp/jstl/fmt">
   <jsp:directive.page contentType="text/html; charset=UTF-8"
-    pageEncoding="UTF-8" session="false" />
+    pageEncoding="UTF-8" session="true" />
   <jsp:output doctype-root-element="html"
     doctype-public="-//W3C//DTD XHTML 1.0 Transitional//EN"
     doctype-system="http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"
@@ -27,7 +28,7 @@
         <br />
         <div id="cart">
           <a href="${contextPath}/action/showCart"><img src="${contextPath}/res/img/cart.png" alt="Shopping Cart"/></a>
-          <span>${itemCount} items ${subTotal}</span>
+          <span>${sessionScope['com.foodrus.util.cart'].itemCount} items <fmt:formatNumber value="${sessionScope['com.foodrus.util.cart'].subTotal}" type="currency"/></span>
         </div>
       </section>
     </div>
