--- a/eecs4413-project/WebContent/Dashboard.jspx
+++ b/eecs4413-project/WebContent/Dashboard.jspx
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <jsp:root xmlns:jsp="http://java.sun.com/JSP/Page" 
-      xmlns:c="http://java.sun.com/jsp/jstl/core" version="2.0">
+      xmlns:c="http://java.sun.com/jsp/jstl/core" 
+      xmlns:food="urn:jsptld:/WEB-INF/tag-lib.tld" 
+      version="2.0">
   <jsp:directive.page contentType="text/html; charset=UTF-8" 
-    pageEncoding="UTF-8" session="false"/>
+    pageEncoding="UTF-8"/>
   <jsp:output doctype-root-element="html"
     doctype-public="-//W3C//DTD XHTML 1.0 Transitional//EN"
     doctype-system="http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"
@@ -17,6 +19,8 @@
       <link rel="alternate StyleSheet"
         href="${contextPath}/res/css/common.css"
         type="text/css" title="eecs4413" media="screen, print" />
+        <link rel="shortcut icon"  type="image/png"
+        href="${contextPath}/res/img/logo4.png" />
     </head>
  
     <body>
@@ -29,8 +33,9 @@
 
         <div id="navBar">
           <ul>
-            <li><a href="${contextPath}/action/">Home Page</a></li>
+            <li><a href="${contextPath}/action/home">Home Page</a></li>
             <li><a href="${contextPath}/action/browseCategories">Browse Categories</a></li>
+            <li><a href="#">Contact us</a></li>
           </ul>
           <div id="promotion">
             <marquee>Free Shipping over $100 purchase!</marquee>
@@ -38,6 +43,12 @@
         </div>
      
         <div id="main">
+          <jsp:include page="ValidationErrors.jspx" />
+          <c:if test="${not empty sessionScope['breadCrumb']['beforeTail']}">
+            <div class="breadCrumbs" style="padding:1.5em;">
+              <food:bradCrumb crumbs="${sessionScope['breadCrumb']}" />
+            </div>
+          </c:if>
           <c:choose>
             <c:when test="${not empty requestScope['com.foodrus.util.target']}">
               <jsp:include page="${requestScope['com.foodrus.util.target']}"></jsp:include>
