--- a/eecs4413-project/WebContent/Items.jspx
+++ b/eecs4413-project/WebContent/Items.jspx
@@ -1,52 +1,56 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-<!-- Categories.jspx starts  -->
-<jsp:root version="2.0" xmlns:jsp="http://java.sun.com/JSP/Page"
-	xmlns:c="http://java.sun.com/jsp/jstl/core"
-	xmlns:fmt="http://java.sun.com/jsp/jstl/fmt">
-	<jsp:directive.page contentType="text/html; charset=UTF-8"
-		pageEncoding="UTF-8" session="false" />
-	<jsp:output doctype-root-element="html"
-		doctype-public="-//W3C//DTD XHTML 1.0 Transitional//EN"
-		doctype-system="http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"
-		omit-xml-declaration="true" />
-	<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<link rel="alternate StyleSheet"
-        href="${contextPath}/res/css/catStyle.css"
-        type="text/css" title="eecs4413" media="screen, print" />
-</head>
-<body>
-
-	<h2>Please Choose Items</h2>
-
-	<c:if test="${ not empty requestScope['com.foodrus.util.items'] }">
-		<c:forEach items="${requestScope['com.foodrus.util.items']}" var="item">
-			
-				<label id="itemname">${item.name}</label>
-				<br/>
-				<br/>
-				<label id="itemnumber">Product ID: ${item.number}</label>
-				<br/>
-				<label id="itemqperunit"> Quantity per Unit: ${item.unit}
-				</label>
-				<br/>
-
-				<label id="itemprice">Unit price: <fmt:formatNumber value="${item.price}" type="currency"/></label>
-				
-				<form action="${contextPath}/action/additem" method="GET">
-					<input type="hidden" id="itemid" name="chosenitem" value="${item.number}" />
-					<span id="purchasetext">Quanity to purchase:</span>
-					<input id="quantity" name="chosenquantity" type="text" value="" /> 
-					<input id="addcart" type="submit" value="add to cart" />
-				</form>
-				<hr width="100%" size="1px"></hr>
-			
-		</c:forEach>
-	</c:if>
-
-
-</body>
-
-	</html>
-	<!-- Items.jspx ends  -->
+<jsp:root  version="2.0" 
+    xmlns:jsp="http://java.sun.com/JSP/Page" 
+    xmlns:c="http://java.sun.com/jsp/jstl/core">
+  <jsp:directive.page contentType="text/html; charset=UTF-8"
+    pageEncoding="UTF-8" />
+  <jsp:output doctype-root-element="html"
+    doctype-public="-//W3C//DTD XHTML 1.0 Transitional//EN"
+    doctype-system="http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"
+    omit-xml-declaration="true" />
+  <html xmlns="http://www.w3.org/1999/xhtml">
+    <div>
+      <h2>Items</h2>
+      <c:if test="${ not empty requestScope['notFound'] }">
+        <span><p>${requestScope['notFound']}</p></span>
+      </c:if>
+      <c:if test="${ not empty requestScope['com.foodrus.util.items'] }">
+        <c:forEach items="${requestScope['com.foodrus.util.items']}" var="item">
+          <form method="post" action="${contextPath}/action/addItem">
+            <input type="hidden" name="itemNumber" value="${item.number}"/>
+            <TABLE>
+              <tr>  
+                <td>${item.name}</td>
+              </tr>
+              <tr>  
+                <td><label>Price:</label>${item.price}</td>
+              </tr>
+              <tr>  
+                <td><label>Item Number:</label>${item.number}</td>
+              </tr>
+              <tr>  
+                <td><label>Units per order:</label>${item.unit}</td>
+              </tr>
+              <tr>  
+                <td><label>Available Quantity:</label>${item.qty}</td>
+              </tr>
+              <tr>  
+                <td>
+                  <label>Quantity:</label> 
+                  <input type="text" 
+                         name="quantity" 
+                         id="quantity" 
+                         value="${not empty requestScope.qty ? requestScope.qty : ''}"/>
+                </td>
+              </tr>
+              <tr>  
+                <td><input type="submit" value="Add to cart"/></td>
+              </tr>
+            </TABLE>
+          </form>
+          <hr size="2" width="700px" align="left"/>
+        </c:forEach>
+      </c:if>
+    </div>
+  </html>
 </jsp:root>
