--- a/eecs4413-project/WebContent/res/css/catStyle.css
+++ b/eecs4413-project/WebContent/res/css/catStyle.css
@@ -1,6 +1,4 @@
 /*category style*/
-
-
 #catform {
 	width: 25%;
 	float: left;
@@ -9,15 +7,13 @@
 	text-align: center;
 }
 
-table td
-{
-	font: "gill-ss-std",Verdana,Geneva,sans-serif;
+table td {
+	font: "gill-ss-std", Verdana, Geneva, sans-serif;
 	font-weight: bold;
 }
-#catDisplay
- {
-	box-sizing: border-box;
 
+#catDisplay {
+	box-sizing: border-box;
 	position: relative;
 	height: 700px;
 	padding-bottom: 30px;
@@ -37,8 +33,7 @@ table td
 	color: green;
 }
 
-#itemDisplay
-{
+#itemDisplay {
 	box-sizing: border-box;
 	position: relative;
 	padding-bottom: 30px;
@@ -46,41 +41,38 @@ table td
 	overflow: auto;
 }
 
-#itemform
-{
-	
+#itemform {
 	width: 28%;
 	float: left;
 	padding: 20px;
 	border: 1px solid grey;
-	overflow:hidden;
+	overflow: hidden;
 	height: 180px;
 }
 
-#itemTable
-{
+#itemTable {
 	padding-left: 50px;
 	width: 100%;
 }
+
 #itemTable td {
 	color: #ffe6cc;
 	font-size: 12px;
 	font-family: "Century Gothic", "Times New Roman", Times, serif;
 }
-#itemTable td label
-{
+
+#itemTable td label {
 	color: #ffe6cc;
 	font-size: 12px;
 	font-family: "Century Gothic", "Times New Roman", Times, serif;
 }
- #itemTable td span
- {
- 	color: Green;
+
+#itemTable td span {
+	color: Green;
 	font-weight: bold;
 	font-size: 18px;
 	font-family: "Times New Roman", Georgia, Serif;
- }
-
+}
 
 #itemprice {
 	color: #ffe6cc;
@@ -91,6 +83,10 @@ table td
 	width: 40px;
 }
 
+#newQty {
+	width: 40px;
+}
+
 #purchasetext {
 	color: #ffffcc;
 	font-weight: bold;
@@ -98,4 +94,25 @@ table td
 
 #addcart {
 	padding-left: 5px;
+}
+
+#checkoutSection {
+	margin: 0px auto;
+	float: left;
+	padding-left: 140px;
+	padding-top: 30px;
+}
+
+#checkoutSection form
+{
+	padding: 10px;
+}
+
+#checkoutSection label
+{
+	font-weight: bold;
+	padding-left: 10px;
+}
+#total {
+	float: left;
 }
